# AI-Powered-File-System

./: Dockerfile  README.md  pyproject.toml
File_System_Restructured/statistical/: math.txt
File_System_Restructured/swimming/: swimming.txt
File_System_Simulation/: football.txt  math.txt  statistical_testing.txt  swimming.txt
File_System_Simulation/dir1/: statistical_testing.txt
files_DB/: football_c0f32165.txt
notebooks/: CLIP_BLIP.ipynb  Clustering.ipynb  FAISS.ipynb  file_adding_pipeline.ipynb  img_captioning.ipynb  summarization.ipynb
src/: add_file_pipeline.py  file_pipeline.py  file_system_restructure.py  get_relevant_files.py  server.py  vec_db_utils.py
vectorDB/: file_index.faiss  index_metadata.json
